// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InheritedSecurityDetails component should render collections correctly 1`] = `
<ForwardRef(Grid)
  item={true}
  style={
    Object {
      "backgroundColor": "rgba(0,0,0,0.05)",
      "padding": 24,
    }
  }
  xs={12}
>
  <ForwardRef(Typography)
    style={
      Object {
        "marginTop": -8,
      }
    }
    variant="h6"
  >
    Inherited security policy details
  </ForwardRef(Typography)>
  <ForwardRef(Grid)
    container={true}
    spacing={1}
    style={
      Object {
        "marginTop": 8,
      }
    }
  >
    <ForwardRef(Grid)
      item={true}
      sm={2}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="subtitle1"
      >
        UQ:11111
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={7}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="subtitle2"
      >
        Test collection
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={3}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="body2"
      >
        <Memo(PolicyDescription)
          selectedPolicyKey={2}
        />
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={2}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="subtitle1"
      >
        UQ:22222
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={7}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="subtitle2"
      >
        Another test collection
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={3}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="body2"
      >
        <Memo(PolicyDescription)
          selectedPolicyKey={4}
        />
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`InheritedSecurityDetails component should render collections for datastreams correctly 1`] = `
<ForwardRef(Grid)
  item={true}
  style={
    Object {
      "backgroundColor": "rgba(0,0,0,0.05)",
      "padding": 24,
    }
  }
  xs={12}
>
  <ForwardRef(Typography)
    style={
      Object {
        "marginTop": -8,
      }
    }
    variant="h6"
  >
    Inherited datastream security policy details
  </ForwardRef(Typography)>
  <ForwardRef(Grid)
    container={true}
    spacing={1}
    style={
      Object {
        "marginTop": 8,
      }
    }
  >
    <ForwardRef(Grid)
      item={true}
      sm={2}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="subtitle1"
      >
        UQ:11111
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={7}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="subtitle2"
      >
        Test collection
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={3}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="body2"
      >
        <Memo(PolicyDescription)
          selectedPolicyKey={2}
        />
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={2}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="subtitle1"
      >
        UQ:22222
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={7}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="subtitle2"
      >
        Another test collection
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={3}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="body2"
      >
        <Memo(PolicyDescription)
          selectedPolicyKey={4}
        />
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`InheritedSecurityDetails component should render collections for datastreams correctly with empty policy description 1`] = `
<ForwardRef(Grid)
  item={true}
  style={
    Object {
      "backgroundColor": "rgba(0,0,0,0.05)",
      "padding": 24,
    }
  }
  xs={12}
>
  <ForwardRef(Typography)
    style={
      Object {
        "marginTop": -8,
      }
    }
    variant="h6"
  >
    Inherited datastream security policy details
  </ForwardRef(Typography)>
  <ForwardRef(Grid)
    container={true}
    spacing={1}
    style={
      Object {
        "marginTop": 8,
      }
    }
  >
    <ForwardRef(Grid)
      item={true}
      sm={2}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="subtitle1"
      >
        UQ:11111
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={7}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="subtitle2"
      >
        Test collection
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={3}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="body2"
      >
        <Memo(PolicyDescription) />
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={2}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="subtitle1"
      >
        UQ:22222
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={7}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="subtitle2"
      >
        Another test collection
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={3}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="body2"
      >
        <Memo(PolicyDescription) />
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`InheritedSecurityDetails component should render collections for record correctly with empty policy description 1`] = `
<ForwardRef(Grid)
  item={true}
  style={
    Object {
      "backgroundColor": "rgba(0,0,0,0.05)",
      "padding": 24,
    }
  }
  xs={12}
>
  <ForwardRef(Typography)
    style={
      Object {
        "marginTop": -8,
      }
    }
    variant="h6"
  >
    Inherited security policy details
  </ForwardRef(Typography)>
  <ForwardRef(Grid)
    container={true}
    spacing={1}
    style={
      Object {
        "marginTop": 8,
      }
    }
  >
    <ForwardRef(Grid)
      item={true}
      sm={2}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="subtitle1"
      >
        UQ:11111
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={7}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="subtitle2"
      >
        Test collection
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={3}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="body2"
      >
        <Memo(PolicyDescription) />
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={2}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="subtitle1"
      >
        UQ:22222
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={7}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="subtitle2"
      >
        Another test collection
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      sm={3}
      xs={12}
    >
      <ForwardRef(Typography)
        variant="body2"
      >
        <Memo(PolicyDescription) />
      </ForwardRef(Typography)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`InheritedSecurityDetails component should render properly 1`] = `
<ForwardRef(Grid)
  item={true}
  style={
    Object {
      "backgroundColor": "rgba(0,0,0,0.05)",
      "padding": 24,
    }
  }
  xs={12}
>
  <ForwardRef(Typography)
    style={
      Object {
        "marginTop": -8,
      }
    }
    variant="h6"
  >
    Inherited security policy details
  </ForwardRef(Typography)>
  <ForwardRef(Grid)
    container={true}
    spacing={1}
    style={
      Object {
        "marginTop": 8,
      }
    }
  />
</ForwardRef(Grid)>
`;
